--- a/code/java/troop/src/main/resources/application.properties
+++ b/code/java/troop/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.initialization-mode=always
 
+# spring.jpa.hibernate.ddl-auto=create
