--- a/code/java/troop/src/main/resources/application.properties
+++ b/code/java/troop/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.initialization-mode=always
 
 # spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
