--- a/code/java/troop/src/main/resources/application.properties
+++ b/code/java/troop/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8086
+logging.level.org.springframework=ERROR
+
 spring.datasource.url=jdbc:postgresql://postgres/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
