--- a/code/java/troop/src/main/resources/application.properties
+++ b/code/java/troop/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8086
+# server.port=8086
 logging.level.org.springframework=ERROR
 
 spring.datasource.url=jdbc:postgresql://postgres/postgres
