test regular docker config

--- a/code/java/troop/src/main/resources/application.properties
+++ b/code/java/troop/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-# server.port=8086
+# server.port=8086        
+# server.contextPath=/myapp 
+
 logging.level.org.springframework=ERROR
 
 spring.datasource.url=jdbc:postgresql://postgres/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+# spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+# spring.datasource.username=vm
+# spring.datasource.password=vm
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.initialization-mode=always
-
-# spring.jpa.hibernate.ddl-auto=create
-# spring.jpa.hibernate.ddl-auto=update
